k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulcanami
  labels:
    name: vulcanami
    environment: base
